; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/media-playback/media-playback/extr_decode.c_decode_packet.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/media-playback/media-playback/extr_decode.c_decode_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_decode = type { i64, %struct.TYPE_7__*, %struct.TYPE_7__*, %struct.TYPE_7__*, i64, %struct.TYPE_6__, i32, i32, i64 }
%struct.TYPE_7__ = type { i64 }
%struct.TYPE_6__ = type { i32 }

@AVERROR_EOF = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_decode*, i32*)* @decode_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_packet(%struct.mp_decode* %0, i32* %1) #0 {
  %3 = alloca %struct.mp_decode*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.mp_decode* %0, %struct.mp_decode** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  store i32 0, i32* %6, align 4
  %7 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %8 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %7, i32 0, i32 8
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %2
  %12 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %13 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %12, i32 0, i32 7
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %16 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %15, i32 0, i32 6
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %20 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %19, i32 0, i32 5
  %21 = call i32 @avcodec_decode_audio4(i32 %14, i32 %17, i32* %18, %struct.TYPE_6__* %20)
  store i32 %21, i32* %5, align 4
  br label %33

22:                                               ; preds = %2
  %23 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %24 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %23, i32 0, i32 7
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %27 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %26, i32 0, i32 6
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %4, align 8
  %30 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %31 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %30, i32 0, i32 5
  %32 = call i32 @avcodec_decode_video2(i32 %25, i32 %28, i32* %29, %struct.TYPE_6__* %31)
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %22, %11
  %34 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %35 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %34, i32 0, i32 1
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %35, align 8
  %37 = load %struct.mp_decode*, %struct.mp_decode** %3, align 8
  %38 = getelementptr inbounds %struct.mp_decode, %struct.mp_decode* %37, i32 0, i32 2
  store %struct.TYPE_7__* %36, %struct.TYPE_7__** %38, align 8
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i32 @avcodec_decode_audio4(i32, i32, i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @avcodec_decode_video2(i32, i32, i32*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
